--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
       <div class="navbar navbar-fixed-top ms_navbar">
           <div class="container">
             <div class="row">
-              <div class="col-xs-8 col-sm-6 col-md-3">
+              <div class="col-xs-8 col-sm-6 col-md-2">
                 <div class="ms_logo">
                   <img src="img/logo.png" alt="">
                 </div>
               </div>
-              <div class="col-xs-4 col-sm-6 col-md-9 text-right">
+              <div class="col-xs-4 col-sm-6 col-md-10 text-right">
                 <nav class="hidden-xs hidden-sm">
                   <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-7">
                       <ul class="ms_inline">
                         <li>
                           <a href="#">
@@ -48,7 +48,7 @@
                         </li>
                       </ul>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-5">
                       <ul class="ms_inline">
                         <li>
                           <a href="#">
@@ -73,14 +73,54 @@
                   </div>
                 </nav>
                 <div class="ms_burger-menu text-right visible-xs-block visible-sm-block">
-                  <i class="fas fa-bars"></i>
+                  <a href="#"><i class="fas fa-bars"></i></a>
                 </div>
               </div>
-              <!-- fine menu -->
             </div>
           </div>
+        </div>
       </div>
       <!-- fine navbar -->
+      <!-- inizio jumbotron -->
+      <div class="ms_jumbotron">
+        <div class="container">
+          <div class="ms_section">
+            <div class="row">
+              <div class="col-xs-12 col-sm-6 col-md-6">
+                <div class="ms_heading">
+                  <h1 class="ms_white">The simplest cloud and platform for developers & team</h1>
+                  <h3 class="ms_lightgrey">
+                    We make it simple to launch in the cloud and scale up as you grow – with an intuitive control panel, predictable pricing, team accounts, and more.
+                  </h3>
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-md-6">
+                <div class="ms_box">
+                  <h2>Deploy your app in seconds.</h2>
+                  <h2 class="ms_blue">Get started now.</h2>
+                  <form class="" action="index.html" method="post">
+                    <div class="form-group">
+                      <label class="sr-only">E-mail</label>
+                      <input type="text" name="email" placeholder="Email Address">
+                    </div>
+                    <div class="form-group">
+                      <label class="sr-only">Password</label>
+                      <input type="text" name="phone" placeholder="Password">
+                    </div>
+                    <a class="btn btn-default" href="#" role="button"><p class="ms_inline ms_white">Create your account</p></a>
+                    <a class="btn btn-default" href="#" role="button">
+                      <img src="img/google-icon.png" alt="">
+                      <p class="ms_inline">Sign up with Google</p>
+                    </a>
+                    <p class="ms_privacy">By singing up you agree to the <a href="#">Terms of Service</a></p>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- fine jumbotron -->
     </header>
   </body>
 </html>
