completamento sezione partners

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
       <!-- fine navbar -->
       <!-- inizio jumbotron -->
-      <div class="ms_jumbotron">
+      <section class="ms_jumbotron">
         <div class="container">
           <div class="ms_section">
             <div class="row">
@@ -119,8 +119,27 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
       <!-- fine jumbotron -->
+      <!-- inizio partnership -->
+      <section class="ms_partners">
+        <div class="container">
+          <div class="ms_section text-center">
+            <div>
+              <h3>INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h3>
+            </div>
+            <div class="ms_images">
+              <img src="img/docker-bab60eeb.png" alt="">
+              <img src="img/gitlab-166e2067.png" alt="">
+              <img src="img/slack-e20293da.png" alt="">
+              <img src="img/hashicorp-4431df79.png" alt="">
+              <img src="img/splunk-06b17d75.png" alt="">
+            </div>
+            <p class="ms_privacy ms"><a href="#">View customer stories ></a></p>
+          </div>
+        </div>
+      </section>
+      <!-- fine partnership -->
     </header>
   </body>
 </html>
