aggiustamenti header responsive

--- a/index.html
+++ b/index.html
@@ -126,20 +126,76 @@
         <div class="container">
           <div class="ms_section text-center">
             <div>
-              <h3>INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h3>
+              <h3 class="ms_grey">INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h3>
             </div>
             <div class="ms_images">
-              <img src="img/docker-bab60eeb.png" alt="">
-              <img src="img/gitlab-166e2067.png" alt="">
-              <img src="img/slack-e20293da.png" alt="">
-              <img src="img/hashicorp-4431df79.png" alt="">
-              <img src="img/splunk-06b17d75.png" alt="">
+              <ul class="ms_inline">
+               <li>
+                 <img src="img/docker-bab60eeb.png" alt="docker">
+               </li>
+               <li>
+                <img src="img/gitlab-166e2067.png" alt="gitlab">
+               </li>
+               <li>
+                <img src="img/slack-e20293da.png" alt="salck">
+               </li>
+               <li>
+                <img src="img/hashicorp-4431df79.png" alt="hashicorp">
+               </li>
+               <li>
+                <img src="img/hashicorp-4431df79.png" alt="hashicorp">
+               </li>
+               <li>
+                <img src="img/splunk-06b17d75.png" alt="splunk">
+               </li>
+             </ul>
+           </div>
+            <div>
+              <p class="ms_privacy"><a href="#">View customer stories ></a></p>
             </div>
-            <p class="ms_privacy ms"><a href="#">View customer stories ></a></p>
           </div>
         </div>
       </section>
       <!-- fine partnership -->
     </header>
+
+    <main>
+      <!-- inizio top main-->
+      <section class="ms_top-main">
+        <div class="container">
+          <div class="ms_section text-center">
+            <div>
+              <h2>Deploy and scale seamlessly</h2>
+              <h3 class="ms_grey">Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</h3>
+            </div>
+            <div class="ms_wrapper60">
+              <div class="row">
+                <div class="col-md-2">
+
+                </div>
+                <div class="col-md-10">
+                  <div class="row">
+                    <div class="col-md-6">
+
+                    </div>
+                    <div class="col-md-6">
+
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6">
+
+                    </div>
+                    <div class="col-md-6">
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </section>
+      <!-- fine bottom main -->
+    </main>
   </body>
 </html>
