completamento top main

--- a/index.html
+++ b/index.html
@@ -163,31 +163,55 @@
       <!-- inizio top main-->
       <section class="ms_top-main">
         <div class="container">
-          <div class="ms_section text-center">
-            <div>
+          <div class="ms_section">
+            <div class="text-center">
               <h2>Deploy and scale seamlessly</h2>
               <h3 class="ms_grey">Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</h3>
             </div>
-            <div class="ms_wrapper60">
+            <div class="ms_wrapper75 ms_section">
               <div class="row">
-                <div class="col-md-2">
-
+                <div class="col-sm-3 col-md-3 ms_border">
+                  <ul class="ms_grey">
+                    <li>
+                      <a href="#">Deploy</a>
+                    </li>
+                    <li>
+                      <a href="#">Manage</a>
+                    </li>
+                    <li>
+                      <a href="#">Secure</a>
+                    </li>
+                    <li>
+                      <a href="#">Scale</a>
+                    </li>
+                    <li>
+                      <a href="#">Monitor</a>
+                    </li>
+                  </ul>
                 </div>
-                <div class="col-md-10">
+                <div class="col-sm-9 col-md-9">
                   <div class="row">
-                    <div class="col-md-6">
-
+                    <div class="col-sm-6 col-md-6">
+                      <img src="img/cluster-deploy.svg" alt="">
+                      <span>Cluster deployments</span>
+                      <p class="ms_grey">Spin up a managed Kubernetes cluster in just a few clicks. Simply specify the size and location of your worker nodes.</p>
                     </div>
-                    <div class="col-md-6">
-
+                    <div class="col-sm-6 col-md-6">
+                      <img src="img/optimized-compute.svg" alt="">
+                      <span>Optimized compute type</span>
+                      <p class="ms_grey">With Standard, General Purpose, CPU-Optimized or Memory-Optimized Droplets.</p>
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-6">
-
+                    <div class="col-sm-6 col-md-6">
+                      <img src="img/one-click.svg" alt="">
+                      <span>One click apps</span>
+                      <p class="ms_grey">Quickly deploy projects using one of our preconfigured 1-Click Apps, like LAMP, Docker, and WordPress.</p>
                     </div>
-                    <div class="col-md-6">
-
+                    <div class="col-sm-6 col-md-6">
+                      <img src="img/global.svg" alt="">
+                      <span>One click apps</span>
+                      <p class="ms_grey">Quickly deploy projects using one of our preconfigured 1-Click Apps, like LAMP, Docker, and WordPress.</p>
                     </div>
                   </div>
                 </div>
@@ -195,7 +219,7 @@
             </div>
           </div>
       </section>
-      <!-- fine bottom main -->
+      <!-- fine top main -->
     </main>
   </body>
 </html>
