--- a/index.html
+++ b/index.html
@@ -220,6 +220,32 @@
           </div>
       </section>
       <!-- fine top main -->
+      <!-- inizio carosello -->
+      <section class="ms_carosello ms_section ms_bg-grey text-center">
+        <div class="container">
+          <div class="text-center">
+            <h2>Designed for developers</h2>
+            <h3 class="ms_grey">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</h3>
+          </div>
+          <span class="ms_chevron hidden-xs">
+            <a href="#">
+              <i class="fas fa-chevron-left"></i>
+            </a>
+          </span>
+            <div class="ms_box-image">
+              <img src="img/screenshot-create-droplet-12336b41.jpg" alt="create droplet">
+            </div>
+            <span class="ms_chevron hidden-xs">
+              <a href="#">
+                <i class="fas fa-chevron-right"></i>
+              </a>
+            </span>
+            <p class="ms_privacy">
+              Create compute servers in 55 seconds or less.
+            </p>
+        </div>
+      </section>
+      <!-- fine carosello -->
     </main>
   </body>
 </html>
