--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </section>
       <!-- fine jumbotron -->
       <!-- inizio partnership -->
-      <section class="ms_partners">
+      <section class="ms_partners ms_bg-grey">
         <div class="container">
           <div class="ms_section text-center">
             <div>
@@ -246,6 +246,172 @@
         </div>
       </section>
       <!-- fine carosello -->
+      <!-- inizio features -->
+      <section class="ms_features ms_section">
+        <div class="container">
+          <div class="text-center">
+            <h2>The features your business needs</h2>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <img src="img/pred-pricing.svg" alt="">
+              <span>Predictable pricing</span>
+              <p class="ms_grey">Leave complex pricing structures behind. Always know what you’ll pay per month with a flat, industry-leading pricing structure.</p>
+              <a href="#">Pricing ></a>
+            </div>
+            <div class="col-md-4">
+              <img src="img/world-class.svg" alt="">
+              <span>World-class service</span>
+              <p class="ms_grey">Free around-the-clock technical support for all customers, with additional benefits for premium support subscribers. You’ll feel the love.</p>
+              <a href="#">Support ></a>
+            </div>
+            <div class="col-md-4">
+              <img src="img/reliable-platform.svg" alt="">
+              <span>Reliable platform</span>
+              <p class="ms_grey">More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</p>
+              <a href="#">Security ></a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- fine features -->
+      <!-- inzio regions -->
+      <section class="ms_regions ms_section">
+        <div class="container">
+          <div class="text-center">
+            <h2>Service your customers around the world from 12 regions</h2>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <table>
+                <tr>
+                  <td>AMS2</td>
+                  <td>Amsterdam, Netherlands</td>
+                  <td>
+                    <a href="#">Test speed ></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>AMS3</td>
+                  <td>Amsterdam, Netherlands</td>
+                  <td>
+                    <a href="#">Test speed ></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>BLR1</td>
+                  <td>Bangalore, India</td>
+                  <td>
+                    <a href="#">Test speed ></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>FRA1</td>
+                  <td>Frankfurt, Germany</td>
+                  <td>
+                    <a href="#">Test speed ></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>LON1</td>
+                  <td>London, UK</td>
+                  <td>
+                    <a href="#">Test speed ></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>NYC1</td>
+                  <td>New York, USA</td>
+                  <td>
+                    <a href="#">Test speed ></a>
+                  </td>
+                </tr>
+              </table>
+            </div>
+            <div class="col-md-6">
+              <table>
+                <tr>
+                  <td>AMS2</td>
+                  <td>Amsterdam, Netherlands</td>
+                  <td>
+                    <a href="#">Test speed ></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>AMS3</td>
+                  <td>Amsterdam, Netherlands</td>
+                  <td>
+                    <a href="#">Test speed ></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>BLR1</td>
+                  <td>Bangalore, India</td>
+                  <td>
+                    <a href="#">Test speed ></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>FRA1</td>
+                  <td>Frankfurt, Germany</td>
+                  <td>
+                    <a href="#">Test speed ></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>LON1</td>
+                  <td>London, UK</td>
+                  <td>
+                    <a href="#">Test speed ></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>NYC1</td>
+                  <td>New York, USA</td>
+                  <td>
+                    <a href="#">Test speed ></a>
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- fine regions -->
+      <!-- inizio secondo carosello -->
+      <section class="ms_carosello ms_secondo-carosello ms_section ms_bg-grey text-center">
+        <div class="container">
+          <div class="text-center">
+            <h2>Development teams love DigitalOcean</h2>
+          </div>
+          <span class="ms_chevron hidden-xs">
+            <a href="#">
+              <i class="fas fa-chevron-left"></i>
+            </a>
+          </span>
+            <div class="ms_slide">
+              <div class="ms_box-image">
+                <img src="img/rockerbox-logo-51462da2.png" alt="">
+                <h3 class="ms_grey">"Easily organize your infrastructure with Projects. And with Teams, everyone can get their own account."</h3>
+                <p class="ms_privacy">
+                  Rick O'Toole
+                </p>
+                <p class="ms_privacy">
+                  Co-founder and CTO
+                </p>
+                <p class="ms_privacy">
+                  <a href="#">Read story ></a>
+                </p>
+              </div>
+            </div>
+            <span class="ms_chevron hidden-xs">
+              <a href="#">
+                <i class="fas fa-chevron-right"></i>
+              </a>
+            </span>
+        </div>
+      </section>
+      <!-- fine secondo carosello -->
     </main>
   </body>
 </html>
