--- a/index.html
+++ b/index.html
@@ -413,5 +413,176 @@
       </section>
       <!-- fine secondo carosello -->
     </main>
+
+    <footer>
+      <!-- inizio top footer -->
+      <section class="ms_top-footer ms_section">
+        <div class="container text-center">
+          <h2>Get started now.</h2>
+          <a class="btn btn-default ms_button" href="#" role="button">Create your account</a>
+        </div>
+      </section>
+      <!-- fine top footer -->
+      <!-- inizio bottom footer -->
+      <section class="ms_bottom-footer">
+        <div class="container ms_section">
+          <div class="row">
+            <div class="col-md-4">
+              <img src="img/logo-small.svg" alt="logo">
+              <p>&copy; 2018 DigitalOcean, LLC. All rihts reserved.</p>
+              <p>Proudly made in NY</p>
+              <ul class="ms_icons">
+                <li>
+                  <a href="#">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-facebook"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-instagram"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-youtube"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-linkedin-in"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-2">
+              <span>Company</span>
+              <ul>
+                <li>
+                  <a href="#">About</a>
+                </li>
+                <li>
+                  <a href="#">Leadership</a>
+                </li>
+                <li>
+                  <a href="#">Link</a>
+                </li>
+                <li>
+                  <a href="#">Blog</a>
+                </li>
+                <li>
+                  <a href="#">Careers</a>
+                </li>
+                <li>
+                  <a href="#">Partner Network</a>
+                </li>
+                <li>
+                  <a href="#">Referral Program</a>
+                </li>
+                <li>
+                  <a href="#">Events</a>
+                </li>
+                <li>
+                  <a href="#">Press</a>
+                </li>
+                <li>
+                  <a href="#">Legal & Security</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-2">
+              <span>Products</span>
+              <ul>
+                <li>
+                  <a href="#">Droplets</a>
+                </li>
+                <li>
+                  <a href="#">Spaces</a>
+                </li>
+                <li>
+                  <a href="#">Kubernetes</a>
+                </li>
+                <li>
+                  <a href="#">Load Balancers</a>
+                </li>
+                <li>
+                  <a href="#">Block Storage</a>
+                </li>
+                <li>
+                  <a href="#">Tools & Integrations</a>
+                </li>
+                <li>
+                  <a href="#">One-click Apps</a>
+                </li>
+                <li>
+                  <a href="#">API</a>
+                </li>
+                <li>
+                  <a href="#">Pricing</a>
+                </li>
+                <li>
+                  <a href="#">Documentation</a>
+                </li>
+                <li>
+                  <a href="#">Release notes</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-2">
+              <span>Community</span>
+              <ul>
+                <li>
+                  <a href="#">Tutorials</a>
+                </li>
+                <li>
+                  <a href="#">Meet-up</a>
+                </li>
+                <li>
+                  <a href="#">Q&A</a>
+                </li>
+                <li>
+                  <a href="#">Write for Donations</a>
+                </li>
+                <li>
+                  <a href="#">Droplets for Demos</a>
+                </li>
+                <li>
+                  <a href="#">Hatch</a>
+                </li>
+                <li>
+                  <a href="#">Shop Swag</a>
+                </li>
+                <li>
+                  <a href="#">Research Program</a>
+                </li>
+                <li>
+                  <a href="#">Current Research</a>
+                </li>
+                <li>
+                  <a href="#">Open Source</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-2">
+              <span>Support</span>
+              <ul>
+                <li>
+                  <a href="#">Contact Supports</li>
+                <li>
+                  <a href="#">FAQ</li>
+                <li>
+                  <a href="#">Network Status</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- fine bottom footer -->
+    </footer>
   </body>
 </html>
