--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </div>
                     <div class="form-group">
                       <label class="sr-only">Password</label>
-                      <input type="text" name="phone" placeholder="Password">
+                      <input type="text" name="password" placeholder="Password">
                     </div>
                     <a class="btn btn-default" href="#" role="button"><p class="ms_inline ms_white">Create your account</p></a>
                     <a class="btn btn-default" href="#" role="button">
@@ -168,7 +168,7 @@
               <h2>Deploy and scale seamlessly</h2>
               <h3 class="ms_grey">Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</h3>
             </div>
-            <div class="ms_wrapper75 ms_section">
+            <div class="ms_wrapper75">
               <div class="row">
                 <div class="col-sm-3 col-md-3 ms_border">
                   <ul class="ms_grey">
@@ -460,7 +460,7 @@
               </ul>
             </div>
             <div class="col-md-2">
-              <span>Company</span>
+              <span class="ms_white">Company</span>
               <ul>
                 <li>
                   <a href="#">About</a>
@@ -495,7 +495,7 @@
               </ul>
             </div>
             <div class="col-md-2">
-              <span>Products</span>
+              <span class="ms_white">Products</span>
               <ul>
                 <li>
                   <a href="#">Droplets</a>
@@ -533,7 +533,7 @@
               </ul>
             </div>
             <div class="col-md-2">
-              <span>Community</span>
+              <span class="ms_white">Community</span>
               <ul>
                 <li>
                   <a href="#">Tutorials</a>
@@ -568,7 +568,7 @@
               </ul>
             </div>
             <div class="col-md-2">
-              <span>Support</span>
+              <span class="ms_white">Support</span>
               <ul>
                 <li>
                   <a href="#">Contact Supports</li>
